--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>高中生物胞吐实验</title>
+    <title>高中生物胞吞实验</title>
     <style>
         /* 全局样式重置 */
         * {
@@ -239,4 +239,5 @@
         };
     </script>
 </body>
+
 </html>
